 * src/callbacks.c, src/dialogs.c:
   Always switch to the tab when showing the unsaved file dialog.
 * src/document.c:
   Don't set the cursor to the start of the document when attempting to
   open an already open file.
 * src/utils.c, src/utils.h, src/callbacks.c, src/sci_cb.c,
   src/document.c:
   Force a file changed check when attempting to open an already open
   file.


2006-12-17  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c:
   Made the sidebar notebook tabs scrollable.
 * geany.glade, src/callbacks.c, src/callbacks.h, src/interface.c,
   src/ui_utils.c:
   Fixed wrong insert position when the cursor was moved by keyboard
   and comments, includes or a date was inserted.
   Also fixed some segfault when inserting comments, dates and includes
   at a position prior to some deleted text.
 * src/document.c: Fixed disabled build menu items after opening the
                   first file of a filetype.


2006-12-17  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c:
   Fix using the current word on first use of the Find in Files dialog.
 * src/document.c:
   Don't log 'replaced 0 occurrences' status messages.
 * src/search.c:
   Remove unneeded 'missing response' debug messages.


2006-12-16  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c:
   Fix memory leak in utils_check_disk_status().
 * src/highlighting.c, src/sci_cb.c, src/sci_cb.h, src/document.c,
   src/symbols.c, src/symbols.h:
   Colourise C enum, union and D/Java interface typenames.
   Add sci_cb_lexer_get_type_keyword_idx() for use when finding if a
   lexer supports typename colouring.


2006-12-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/main.c, src/sci_cb.c, src/sci_cb.h, src/symbols.c,
   src/symbols.h:
   Moved html_entities array to symbols.c.
   Fixed some checks for the new D lexer and improved detection of
   comments when auto completing or showing calltips.