@@ -15,6 +15,9 @@
    src/document.c:
    Force a file changed check when attempting to open an already open
    file.
+ * src/sciwrappers.c, src/sciwrappers.h, src/document.c:
+   Scroll cursor to 50% of the view when reloading a file.
+   Rename sci_goto_pos() argument 'unfold'.
 
 
 2006-12-17  Enrico Tröger  <enrico.troeger@uvena.de>
